[package]
name = "netprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "tls", "dns", "tokio", "noise", "yamux", "gossipsub", "mdns", "macros", "quic"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio-util = "0.7"
